[package]
name = "aoc2024-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
eval = "0.4.3"
hashbrown = "0.15.2"
indoc = "2.0.5"
itertools = "0.13.0"
nalgebra = "0.33.2"
petgraph = "0.6.5"
priority-queue = "2.1.1"
regex = "1.11.1"
smallvec = "1.13.2"
